piglit: add blacklist for platforms

--- a/piglit-test/bdw.conf
+++ b/piglit-test/bdw.conf
@@ -31,7 +31,6 @@ piglit.spec.arb_texture_rectangle.texwrap rect offset = piglit 1367a0a
 piglit.spec.arb_sample_shading.arb_sample_shading-builtin-gl-sample-mask-mrt-alpha = piglit 9243dab81533ef04591cd1d78c130e4a1995f1ed
 piglit.spec.arb_shader_subroutine.linker.no-overloads.vert = piglit 8db83c4
 piglit.spec.arb_shader_image_load_store.early-z = mesa d03c65793a5ee31f1138cbd0fba6fac6cd942428 bug 91608
-piglit.spec.arb_shader_image_load_store.execution.basic-imagestore-from-uniform = mesa 5346c11
 piglit.spec.ext_texture_format_bgra8888.api-errors = piglit d4e141d
 piglit.spec.arb_program_interface_query.arb_program_interface_query-getprogramresourceindex = mesa 6e3b380
 piglit.spec.arb_separate_shader_objects.execution.layout-location-struct = piglit f858b00
@@ -1106,4 +1105,5 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = mesa 3a1df1
 piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 piglit.spec.!opengl 1_4.copy-pixels = mesa 7fd962093f71d83ffc74962a8f7572b493d9030f
 piglit.shaders.glsl-fs-vec4-indexing-8 = mesa cbe4baed1f63db697500db069756750afc9e7609
+piglit.spec.arb_shader_image_load_store.execution.basic-imagestore-from-uniform = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
