--- a/piglit-test/g965.conf
+++ b/piglit-test/g965.conf
@@ -17,7 +17,6 @@ piglit.spec.egl_khr_create_context.valid debug flag gles1
 piglit.spec.egl_khr_create_context.valid debug flag gles2
 piglit.spec.egl_khr_create_context.valid debug flag gles3
 piglit.spec.egl_khr_create_context.valid forward-compatible flag gl
-piglit.spec.ext_framebuffer_object.fbo-maxsize
 piglit.spec.ext_packed_depth_stencil.depth_stencil texture
 piglit.spec.glsl-1_10.execution.vs-float-main-return
 piglit.spec.glsl-1_10.execution.vs-vec2-main-return
@@ -25,8 +24,6 @@ piglit.spec.glsl-es-1_00.linker.glsl-pcoord-invariant = piglit 071c57a
 piglit.spec.glsl-es-1_00.linker.glsl-fcoord-invariant = piglit 071c57a
 piglit.spec.glsl-es-1_00.linker.glsl-fface-invariant = piglit 071c57a
 piglit.shaders.glsl-deriv-varyings = piglit cd62eff8e5925efa56778d7a103402e96d19a794
-piglit.spec.glsl-1_10.execution.clipping.clip-plane-transformation pos_clipvert = mesa-37c2687645bf44515dbd1bc1c066b02889ca46c4
-piglit.spec.glsl-1_20.execution.clipping.fixed-clip-enables = mesa-37c2687645bf44515dbd1bc1c066b02889ca46c4
 piglit.shaders.dependency-hints.exp2 = mesa 2934863
 piglit.spec.arb_copy_image.arb_copy_image-formats = piglit 605cddc
 piglit.spec.!opengl 1_1.teximage-colors gl_rgba32f = piglit 59a6a42
@@ -66,6 +63,15 @@ piglit.spec.glsl-1_20.execution.qualifiers.vs-out-conversion-int-to-float-vec4-i
 piglit.spec.glsl-1_10.execution.vs-loop-simple-unroll-induction-variable-inside-if-branch = piglit f3471456a81cee515a201775e8a29edb28852a6d
 piglit.spec.!opengl 1_0.gl-1_0-bitmap-heart-dance = piglit 8497129477250648a7379ded1bb3024e7897d7a3
 piglit.spec.!opengl 1_1.getteximage-simple = piglit 7caac60fb59e8e966a71bfb84a527ae3edcf40ae
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples color depthstencil linear = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples color small depthstencil linear = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.enable-flag = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil linear = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small depthstencil = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples color small depthstencil = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small depthstencil linear = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples color depthstencil = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
@@ -73,34 +79,6 @@ piglit.spec.!opengl 1_0.gl-1.0-swapbuffers-behavior
 piglit.spec.!opengl 1_1.drawbuffer-modes
 piglit.spec.!opengl 1_1.read-front
 piglit.spec.!opengl 1_1.read-front clear-front-first
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 1d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 1dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2drectshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 3d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb cube
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 1d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 1dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 2d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 2dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 3d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod cube
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1d_projvec4
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2drectshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2d_projvec4
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 3d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1d_projvec4
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2d
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2dshadow
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2d_projvec4
-piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 3d
 piglit.spec.ext_framebuffer_blit.fbo-sys-blit
 piglit.spec.ext_framebuffer_blit.fbo-sys-sub-blit
 piglit.spec.!opengl 1_0.gl-1_0-front-invalidate-back = piglit 09459ca
@@ -418,4 +396,35 @@ piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 4210d072f1a40fe06c6ca46e985871a384cca514
 piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image-errors = mesa b37b35a5d265adde971265f4e594298a172d0d45
 piglit.shaders.glsl-fs-vec4-indexing-8 = mesa cbe4baed1f63db697500db069756750afc9e7609
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb cube = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 1dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 1d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2drectshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 1dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_object.fbo-maxsize = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 3d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2d_projvec4 = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 3d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 3d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2d_projvec4 = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod cube = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 2d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projlod 1d_projvec4 = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 2dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 1d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 3d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 2drectshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1d_projvec4 = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *lod 2d = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *projgradarb 1dshadow = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.glsl-1_20.execution.clipping.fixed-clip-enables = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.glsl-1_10.execution.clipping.clip-plane-transformation pos_clipvert = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
