--- a/piglit-test/snbm32.conf
+++ b/piglit-test/snbm32.conf
@@ -45,7 +45,6 @@ piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangles_adjac
 piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_fan ffs
 piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_fan other
 piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_strip other
-piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_strip_adjacency ffs
 piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_strip_adjacency other
 piglit.spec.glsl-1_50.execution.geometry.primitive-types gl_triangle_strip_adjacency
 piglit.spec.glsl-1_50.execution.geometry.tri-strip-ordering-with-prim-restart gl_triangle_strip ffs
@@ -722,4 +721,5 @@ piglit.spec.arb_shader_draw_parameters.baseinstance = mesa 3a1df14a7b5c1652aa72e
 piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 piglit.spec.!opengl 1_4.copy-pixels = mesa 7fd962093f71d83ffc74962a8f7572b493d9030f
 piglit.shaders.glsl-fs-vec4-indexing-8 = mesa cbe4baed1f63db697500db069756750afc9e7609
+piglit.spec.glsl-1_50.execution.geometry.primitive-id-restart gl_triangle_strip_adjacency ffs = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
