--- a/piglit-test/bsw.conf
+++ b/piglit-test/bsw.conf
@@ -22,7 +22,6 @@ piglit.spec.glsl-es-1_00.linker.glsl-fface-invariant = initial_bsw_fail
 piglit.spec.glsl-es-1_00.linker.glsl-pcoord-invariant = initial_bsw_fail
 piglit.spec.glsl-1_30.compiler.clipping.clip-distance-redeclare-without-inout.frag = fail_on_first_enable
 piglit.spec.glsl-1_30.compiler.clipping.clip-distance-redeclare-without-inout.vert = fail_on_first_enable
-piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic = mesa 83199998310591b9162ab12e922ed79ee235b5c8
 piglit.spec.!opengl 1_2.texwrap 3d offset = piglit 1367a0a
 piglit.spec.!opengl 1_1.texwrap 1d offset = piglit 1367a0a
 piglit.spec.arb_texture_rectangle.texwrap rect offset = piglit 1367a0a
@@ -1064,4 +1063,5 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = mesa 3a1df1
 piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 piglit.spec.!opengl 1_4.copy-pixels = mesa 7fd962093f71d83ffc74962a8f7572b493d9030f
 piglit.shaders.glsl-fs-vec4-indexing-8 = mesa cbe4baed1f63db697500db069756750afc9e7609
+piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
