--- a/piglit-test/byt.conf
+++ b/piglit-test/byt.conf
@@ -57,7 +57,6 @@ piglit.spec.egl_khr_create_context.valid debug flag gles3
 piglit.spec.egl_khr_create_context.valid forward-compatible flag gl
 piglit.spec.ext_texture_integer.texwrap formats bordercolor
 piglit.spec.ext_texture_integer.texwrap formats bordercolor-swizzled
-piglit.spec.ext_timer_query.time-elapsed
 piglit.spec.ext_transform_feedback.tessellation triangle_fan flat_first
 piglit.spec.glsl-1_10.execution.vs-float-main-return
 piglit.spec.glsl-1_10.execution.vs-vec2-main-return
@@ -91,7 +90,6 @@ piglit.spec.ext_texture_compression_s3tc.texwrap formats offset = piglit_d05448d
 piglit.spec.arb_texture_compression_bptc.texwrap formats offset = piglit_d05448d06fdbfa0f0e11cdf6142f09e73c7b6dea
 piglit.spec.ext_texture_compression_rgtc.texwrap formats offset = piglit_d05448d06fdbfa0f0e11cdf6142f09e73c7b6dea
 piglit.spec.ext_texture_srgb.texwrap formats-s3tc offset = piglit_d05448d06fdbfa0f0e11cdf6142f09e73c7b6dea
-piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic = mesa 83199998310591b9162ab12e922ed79ee235b5c8
 piglit.spec.!opengl 1_2.texwrap 3d offset = piglit 1367a0a
 piglit.spec.!opengl 1_1.texwrap 1d offset = piglit 1367a0a
 piglit.spec.arb_texture_rectangle.texwrap rect offset = piglit 1367a0a
@@ -196,7 +194,6 @@ piglit.spec.arb_gpu_shader_fp64.varying-packing.simple dmat3x4 array = mesa cd0a
 piglit.spec.arb_gpu_shader_fp64.varying-packing.simple double array = mesa ad55b1a7701ad51234af3b9fc30f4c54d2546b86
 piglit.spec.arb_gpu_shader_fp64.varying-packing.simple double separate = mesa ad55b1a7701ad51234af3b9fc30f4c54d2546b86
 piglit.spec.arb_gpu_shader_fp64.varying-packing.simple double arrays_of_arrays = mesa ad55b1a7701ad51234af3b9fc30f4c54d2546b86
-piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil = piglit 3b9e5ba14b930fe61761d5ddbd736593ef000228
 piglit.spec.glsl-1_20.execution.fs-deref-literal-array-of-structs-with-multiple-members-large-array = piglit c8f4fd9eeb298a2ef0855927f22634f794ef3eff
 piglit.spec.glsl-1_50.linker.interstage-multiple-shader-objects = piglit 56e7e5583cd4a3ca15a8cda154d46d168959dd25
 piglit.spec.arb_sample_shading.samplemask 2 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
@@ -813,4 +810,7 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = mesa 3a1df1
 piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 piglit.spec.!opengl 1_4.copy-pixels = mesa 7fd962093f71d83ffc74962a8f7572b493d9030f
 piglit.shaders.glsl-fs-vec4-indexing-8 = mesa cbe4baed1f63db697500db069756750afc9e7609
+piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_timer_query.time-elapsed = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
+piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
