--- a/piglit-test/ilk.conf
+++ b/piglit-test/ilk.conf
@@ -43,6 +43,7 @@ piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7
 piglit.spec.glsl-1_20.execution.qualifiers.vs-out-conversion-int-to-float-vec4-index = piglit 93b35926a150e318439d2505901288594b3548f5
 piglit.spec.glsl-1_10.execution.vs-loop-simple-unroll-induction-variable-inside-if-branch = piglit f3471456a81cee515a201775e8a29edb28852a6d
 piglit.spec.!opengl 1_0.gl-1_0-bitmap-heart-dance = piglit 8497129477250648a7379ded1bb3024e7897d7a3
+piglit.spec.ext_timer_query.timer_query = mesa_ci 41ac7efa7f6e904448f30f874b10858c57603083
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
