--- a/piglit-test/g965_blacklist.conf
+++ b/piglit-test/g965_blacklist.conf
@@ -1,5 +1,13 @@
 # bug 102594
-piglit.spec.nv_conditional_render.vertex_array
-piglit.spec.nv_conditional_render.drawpixels
+piglit.spec.nv_conditional_render.bitmap
+piglit.spec.nv_conditional_render.blitframebuffer
 piglit.spec.nv_conditional_render.clear
+piglit.spec.nv_conditional_render.copypixels
+piglit.spec.nv_conditional_render.dlist
+piglit.spec.nv_conditional_render.drawpixels
 piglit.spec.nv_conditional_render.vertex_array
+    
+# unexplained
+piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
+piglit.spec.!opengl 1_0.gl-1_0-user-clip-all-planes
