--- a/piglit-test/ivb_blacklist.conf
+++ b/piglit-test/ivb_blacklist.conf
@@ -1,2 +1,3 @@
 piglit.spec.arb_shader_storage_buffer_object.execution.ssbo-atomicexchange-int
 piglit.spec.arb_shader_image_load_store.invalid
+piglit.spec.!opengl 1_3.gl-1_3-texture-env
