--- a/piglit-test/bdw_blacklist.conf
+++ b/piglit-test/bdw_blacklist.conf
@@ -1,3 +1,5 @@
 piglit.spec.arb_shader_image_load_store.execution.basic-imagestore-from-uniform
 # Bug 91017
 piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic
+
+piglit.spec.arb_shader_texture_lod.execution.tex-miplevel-selection *gradarb 2d
