--- a/piglit-test/bsw_blacklist.conf
+++ b/piglit-test/bsw_blacklist.conf
@@ -1,2 +1,3 @@
 # Bug 91017
 piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic
+piglit.spec.arb_shader_storage_buffer_object.execution.ssbo-atomicexchange-int
