piglit: expand blacklist

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -54,4 +54,8 @@ piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small depthstencil
 
+# intermittently fails with "i965: Failed to submit batchbuffer: Bad address"
 piglit.spec.!opengl 1_0.gl-1_0-scissor-bitmap
+piglit.spec.!opengl 1_1.copypixels-sync
+piglit.spec.!opengl 1_1.draw-sync
+piglit.spec.!opengl 1_3.gl-1_3-texture-env
