--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -48,6 +48,7 @@ piglit.spec.ext_framebuffer_multisample.accuracy 2 depth_resolve small depthsten
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy 4 depth_resolve small
+piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
