piglit: incremental additions to blacklist

--- a/piglit-test/skl_blacklist.conf
+++ b/piglit-test/skl_blacklist.conf
@@ -1,3 +1,1 @@
-# 93355
-piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
-piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj(bias) 1d
