--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -44,12 +44,15 @@ piglit.spec.glsl-1_10.execution.vs-vec2-main-return
 # https://bugs.freedesktop.org/show_bug.cgi?id=97577
 piglit.spec.oes_shader_io_blocks.compiler.layout-location-aliasing_vert
 
+# bug 93355
 piglit.spec.ext_framebuffer_multisample.accuracy 2 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy 4 depth_resolve small
+piglit.spec.ext_framebuffer_multisample.accuracy 4 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
