--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -55,6 +55,7 @@ piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthsten
 piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small depthstencil
 
