piglit: blacklist flaky g965 test

--- a/piglit-test/g965_blacklist.conf
+++ b/piglit-test/g965_blacklist.conf
@@ -8,6 +8,7 @@ piglit.spec.nv_conditional_render.drawpixels
 piglit.spec.nv_conditional_render.vertex_array
     
 # unexplained
+piglit.spec.!opengl 1_0.gl-1_0-user-clip-all-planes
 piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
-piglit.spec.!opengl 1_0.gl-1_0-user-clip-all-planes
+piglit.spec.glsl-1_10.execution.clipping.clip-plane-transformation pos_clipvert
