debian installer: force use of testing repos during installation
This is helpful if the current testing netinst images are broken, and something like
buster or stable images are needed to be able to install the system. It makes sure that
the system ends up with the testing repos added/enabled after the installation.

--- a/debian_installer/jenkins.cfg
+++ b/debian_installer/jenkins.cfg
@@ -24,6 +24,10 @@ d-i mirror/http/hostname string linux-ftp.jf.intel.com
 d-i mirror/http/directory string /pub/mirrors/debian
 d-i mirror/http/proxy string
 
+# Force use of testing repos (e.g. in case installer image is not testing)
+d-i mirror/suite string testing
+d-i mirror/udeb/suite string testing
+
 # Enable 32 bit by default
 d-i apt-setup/multiarch string i386
 
