piglit: expand blacklist

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -58,6 +58,7 @@ piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small depthstencil linear
 
 # intermittently fails with "i965: Failed to submit batchbuffer: Bad address"
