piglit: expand blacklist

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -45,6 +45,7 @@ piglit.spec.glsl-1_10.execution.vs-vec2-main-return
 piglit.spec.oes_shader_io_blocks.compiler.layout-location-aliasing_vert
 
 # bug 93355
+piglit.spec.ext_framebuffer_multisample.accuracy 16 stencil_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 2 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 2 stencil_resolve small
