blacklist: incrementally expand flaky tests

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -55,12 +55,14 @@ piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy 8 stencil_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb small depthstencil linear
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples stencil_draw small depthstencil
 
 # intermittently fails with "i965: Failed to submit batchbuffer: Bad address"
 # https://bugs.freedesktop.org/show_bug.cgi?id=104778
