piglit: disable flaky tests

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -74,3 +74,6 @@ piglit.spec.!opengl 1_0.gl-1_0-scissor-bitmap
 piglit.spec.!opengl 1_1.copypixels-sync
 piglit.spec.!opengl 1_1.draw-sync
 piglit.spec.!opengl 1_3.gl-1_3-texture-env
+
+# intermittent on hsw and bdw
+piglit.spec.arb_shader_storage_buffer_object.execution.ssbo-atomicexchange-int
