piglit: incrementally improve blacklist

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -77,3 +77,6 @@ piglit.spec.!opengl 1_3.gl-1_3-texture-env
 
 # intermittent on hsw and bdw
 piglit.spec.arb_shader_storage_buffer_object.execution.ssbo-atomicexchange-int
+
+# intermittent on skl and bdw
+piglit.spec.arb_shader_clock.execution.clock
