Piglit/glescts: Disable flaky tests.
More tests in preexisting categories found to be flaky.

--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -81,3 +81,4 @@ piglit.spec.arb_shader_storage_buffer_object.execution.ssbo-atomicexchange-int
 
 # intermittent on skl and bdw
 piglit.spec.arb_shader_clock.execution.clock
+piglit.spec.arb_shader_clock.execution.clock2x32
