mesa jenkins updates due to piglit=2fa9b8fa3e

--- a/piglit-test/kbl.conf
+++ b/piglit-test/kbl.conf
@@ -132,6 +132,8 @@ piglit.spec.egl 1_4.egl-copy-buffers = piglit 85e3b32b3260184853ec20b938574c26a0
 piglit.spec.arb_enhanced_layouts.arb_enhanced_layouts-transform-feedback-layout-qualifiers_vs = piglit 2fa9b8fa3e81e230977c2b16ca5b03dd6d85d69b
 piglit.spec.arb_enhanced_layouts.arb_enhanced_layouts-transform-feedback-layout-qualifiers_vs_ifc = piglit 2fa9b8fa3e81e230977c2b16ca5b03dd6d85d69b
 piglit.spec.arb_enhanced_layouts.arb_enhanced_layouts-transform-feedback-layout-qualifiers_vs_named_ifc = piglit 2fa9b8fa3e81e230977c2b16ca5b03dd6d85d69b
+piglit.spec.arb_enhanced_layouts.arb_enhanced_layouts-transform-feedback-layout-qualifiers_vs_struct = piglit 2fa9b8fa3e81e230977c2b16ca5b03dd6d85d69b
+piglit.spec.arb_enhanced_layouts.arb_enhanced_layouts-transform-feedback-layout-qualifiers_vs_double = piglit 2fa9b8fa3e81e230977c2b16ca5b03dd6d85d69b
 
 [fixed-tests]
 piglit.spec.glsl-es-3_00.compiler.uniform_block.interface-name-basic.vert = fixed_after_10.5_49299ef6fa0cf88e7101512400a4e74efa300941
