--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -8,3 +8,7 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshadow
