--- a/piglit-test/blacklist.conf
+++ b/piglit-test/blacklist.conf
@@ -57,6 +57,7 @@ piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 6 depth_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_resolve small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy 8 depth_draw small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy 8 stencil_resolve small depthstencil
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_draw small
