piglit: expand blacklist
ICL requires additional blacklisting of flaky tex-miplevel-selection
tests.

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -9,6 +9,7 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
