piglit-test: blacklist flakey test on icl

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -14,3 +14,4 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1ds
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
