--- a/piglit-test/byt_blacklist.conf
+++ b/piglit-test/byt_blacklist.conf
@@ -1,3 +1,6 @@
 # Bug 91017
 piglit.spec.arb_framebuffer_no_attachments.arb_framebuffer_no_attachments-atomic
 piglit.spec.ext_timer_query.timer_query
+
+# bug 107742
+piglit.spec.arb_shader_image_load_store.invalid
