piglit-test: blacklist flakey test on icl

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -15,3 +15,4 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshado
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1dshadow
