piglit: blacklist flakey multisample test on byt

--- a/piglit-test/byt_blacklist.conf
+++ b/piglit-test/byt_blacklist.conf
@@ -4,3 +4,6 @@ piglit.spec.ext_timer_query.timer_query
 
 # bug 107742
 piglit.spec.arb_shader_image_load_store.invalid
+
+# bug 107828
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
