--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -16,3 +16,5 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshado
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
+piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
