--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -19,3 +19,4 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
+piglit.spec.ext_transform_feedback.max-varyings
