--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -18,5 +18,6 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
+piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
 piglit.spec.ext_transform_feedback.max-varyings
