--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -21,3 +21,4 @@ piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
 piglit.spec.ext_transform_feedback.max-varyings
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
