piglit: new test intermittent on bxt
piglit.spec.arb_provoking_vertex.arb-provoking-vertex-clipped-geometry-flatshading

--- a/piglit-test/bxt_blacklist.conf
+++ b/piglit-test/bxt_blacklist.conf
@@ -1,1 +1,2 @@
 piglit.spec.arb_compute_shader.execution.simple-barrier-atomics
+piglit.spec.arb_provoking_vertex.arb-provoking-vertex-clipped-geometry-flatshading
