icl: drop flaky piglit test

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -23,3 +23,4 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshado
 piglit.spec.ext_transform_feedback.max-varyings
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2dshadow
+piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
