piglit: expand multisample accuracy blacklist for old platforms
We don't care if it fails

--- a/piglit-test/byt_blacklist.conf
+++ b/piglit-test/byt_blacklist.conf
@@ -6,4 +6,7 @@ piglit.spec.ext_timer_query.timer_query
 piglit.spec.arb_shader_image_load_store.invalid
 
 # bug 107828
+piglit.spec.ext_framebuffer_multisample.accuracy 4 srgb small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
 piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
