--- a/piglit-test/g965_blacklist.conf
+++ b/piglit-test/g965_blacklist.conf
@@ -7,8 +7,13 @@ piglit.spec.nv_conditional_render.dlist
 piglit.spec.nv_conditional_render.drawpixels
 piglit.spec.nv_conditional_render.vertex_array
     
+# bug 107828
+piglit.spec.ext_framebuffer_multisample.accuracy 4 srgb small depthstencil
+piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples depth_resolve small
+piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
+
 # unexplained
 piglit.spec.!opengl 1_0.gl-1_0-user-clip-all-planes
-piglit.spec.ext_framebuffer_multisample.accuracy 6 stencil_draw small
-piglit.spec.ext_framebuffer_multisample.accuracy all_samples srgb depthstencil
 piglit.spec.glsl-1_10.execution.clipping.clip-plane-transformation pos_clipvert
+
