mesa jenkins updates due to vulkancts=dee333fa3

--- a/vulkancts-test/hsw.conf
+++ b/vulkancts-test/hsw.conf
@@ -2706,6 +2706,22 @@ dEQP-VK.subgroups.clustered.subgroupclusteredadd_vec2_compute = vulkancts 4fee4b
 dEQP-VK.subgroups.arithmetic.subgroupmul_vec2_compute = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
 dEQP-VK.subgroups.arithmetic.subgroupinclusivemul_uint_graphic = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
 dEQP-VK.spirv_assembly.instruction.graphics.cross_stage.basic_type.relaxedprecision = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.image.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.image.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.image.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.image.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.buffer.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.image.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.buffer.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.image.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.buffer.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.buffer.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.image.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.buffer.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.buffer.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.write_after_read.core11.u32.coherent.fence_fence.atomicwrite.device.payload_local.buffer.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.image.guard_local.buffer.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
+dEQP-VK.memory_model.message_passing.core11.u32.coherent.fence_fence.atomicwrite.subgroup.payload_local.buffer.guard_local.image.vert = vulkancts dee333fa3a0e3dc5ff26d245af65b048d1e5fda8
 
 [fixed-tests]
 dEQP-VK.api.command_buffers.order_bind_pipeline = mesa eb384da
