--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -1,3 +1,7 @@
+piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
+piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
+piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
+piglit.spec.ext_transform_feedback.max-varyings
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 3d
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() cube
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 3d
@@ -5,22 +9,19 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1darrayshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset 3d
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 1dshadow
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
-piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
-piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
-piglit.spec.ext_transform_feedback.max-varyings
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
-piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2dshadow
-piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojoffset(bias) 2dshadow
