--- a/vulkancts-test/hsw.conf
+++ b/vulkancts-test/hsw.conf
@@ -9526,4 +9526,7 @@ dEQP-VK.texture.mipmap.2d.projected.nearest_linear_mirror = vulkancts 4fee4be343
 dEQP-VK.texture.mipmap.2d.projected.linear_nearest_repeat = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
 dEQP-VK.api.copy_and_blit.core.resolve_image.diff_image_size.dst_256_256_11_8_bit = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
 dEQP-VK.pipeline.sampler.view_type.2d.format.r32_uint.address_modes.uvw_mode_clamp_to_border_mode_mirrored_repeat_mode_mirror_clamp_to_edge = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
-
+dEQP-VK.renderpass2.dedicated_allocation.attachment_allocation.input_output.46 = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
+dEQP-VK.renderpass2.dedicated_allocation.attachment_allocation.input_output.82 = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
+dEQP-VK.renderpass2.suballocation.attachment_allocation.input_output.46 = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
+dEQP-VK.renderpass2.suballocation.attachment_allocation.input_output.82 = vulkancts 4fee4be343e3f2fe38fb089a01762faadd8b7b9b
