piglit: expand icl flaky tests

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -10,6 +10,7 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1darrayshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1dshadow
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturelodoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2darray
