--- a/piglit-test/glk.conf
+++ b/piglit-test/glk.conf
@@ -41,7 +41,6 @@ piglit.spec.glsl-4_50.compiler.extra-semilons-at-global-scope_frag = mesa babd1d
 piglit.spec.glsl-1_30.compiler.clipping.clip-distance-redeclare-without-inout_vert = piglit 09459ca7f025484229d8d39c673c5d1fea54a6c4
 piglit.spec.glsl-1_30.compiler.clipping.clip-distance-redeclare-without-inout_frag = piglit 09459ca7f025484229d8d39c673c5d1fea54a6c4
 piglit.spec.arb_multi_draw_indirect.arb_draw_elements_base_vertex-multidrawelements -indirect = piglit 096c6164b65b45ada3fc4c3f14302fc14030313b
-piglit.spec.arb_provoking_vertex.arb-provoking-vertex-clipped-geometry-flatshading = piglit 67675034486e29ecbc4a4da2fc74b184d7d11cb8 linux b77422f80337d363eed60c8c48db9cb6e33085c9
 piglit.spec.arb_fragment_shader_interlock.compiler.endinvocationinterlock-twice_frag = piglit 47af7fcad070c755327cd3a075a8cbc524f4d37d
 piglit.spec.arb_fragment_shader_interlock.compiler.endinvocationinterlock-before-begininvocationinterlock_frag = piglit 47af7fcad070c755327cd3a075a8cbc524f4d37d
 piglit.spec.arb_fragment_shader_interlock.compiler.begininvocationinterlock-twice_frag = piglit 47af7fcad070c755327cd3a075a8cbc524f4d37d
@@ -624,4 +623,5 @@ piglit.spec.arb_gpu_shader_fp64.execution.built-in-functions.fs-sign-sat-neg-abs
 piglit.spec.arb_gpu_shader_fp64.execution.built-in-functions.vs-sign-sat-neg-abs = mesa 497675c21ee34dfe1e8f9dfe62f6a3011f8062e5
 piglit.spec.arb_fragment_program.fp-fragment-position = mesa 18cc65edf8480bc83685b3665c8c5268b1da79e6
 piglit.spec.arb_fragment_program.trinity-fp1 = mesa 18cc65edf8480bc83685b3665c8c5268b1da79e6
+piglit.spec.arb_provoking_vertex.arb-provoking-vertex-clipped-geometry-flatshading = linux kernel commit by ken
 
