icl: expand blacklist

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -2,8 +2,11 @@ piglit.spec.arb_compute_shader.execution.shared-atomicmax-int
 piglit.spec.arb_compute_shader.execution.shared-atomicmax-uint
 piglit.spec.arb_texture_cube_map.copyteximage cube samples=16
 piglit.spec.ext_transform_feedback.max-varyings
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 2d
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() 3d
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:texture() cube
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d
+piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d_projvec4
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darray
@@ -18,6 +21,8 @@ piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 2dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureoffset(bias) 3d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2d
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 2d_projvec4
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojgradoffset 1dshadow
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection textureprojlodoffset 2dshadow
