piglit: disable flaky icl test

--- a/piglit-test/icl_blacklist.conf
+++ b/piglit-test/icl_blacklist.conf
@@ -9,6 +9,7 @@ piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 2d_projvec4
 piglit.spec.glsl-1_20.execution.tex-miplevel-selection gl2:textureproj 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 1darray
+piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 2darray
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texture() 3d
 piglit.spec.glsl-1_30.execution.tex-miplevel-selection texturegradoffset 1darrayshadow
